# netology_homework_2_11

1/: 1.sln
1/app_needs_lib/: app_needs_lib.vcxproj  client.cpp
1/static_lib/: greeter.cpp  greeter.h  static_lib.vcxproj
2/: 2.sln
2/client/: client.vcxproj
2/dynamic_lib/: dynamic_lib.vcxproj  leaver.cpp  leaver.h
3/: CMakeLists.txt
3/lib/: leaver.cpp  leaver.h
3/source/: client.cpp
4/: 4.sln
4/client/: client.vcxproj
4/dynamic_lib_hierarchy/: dynamic_lib_hierarchy.vcxproj  equilateraltriangle.h  export_macros.h  figure.h  isoscelestriangle.h  parallelogram.h  quadrilateral.h  rectangle.h  rhomb.h  righttriangle.h  square.h  triangle.h
5/: CMakeLists.txt
5/lib/: equilateraltriangle.h  figure.h  square.h  triangle.h
